# attd

./: .gitignore  .travis.yml  COPYING  Makefile  NEWS.md  README.md  RELEASING.md  attd.py  pyproject.toml  setup.py
.github/workflows/: test.yml
test/: test_attd.py
tools/: release
