[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "attd"
dynamic = ["version"]
description = "Dictionary with attribute access to keys"
readme = "README.md"
license = "MIT"
requires-python = ">=3.1.0"
authors = [{ name = "Osmo Salomaa", email = "otsaloma@iki.fi" }]

[project.urls]
Homepage = "https://github.com/otsaloma/attd"

[tool.hatch.version]
path = "attd.py"

[tool.hatch.build.targets.sdist]
include = ["attd.py"]
